# platform-infrastructure

./: .gitignore  Makefile  README.md  docker-compose.yml
.buildkite/: pipeline.redirectsTest.yml  pipeline.triggers.yml  pipeline.yml
.github/: pull_request_template.md
accounts/: .gitignore  README.md  account.tf  describe_access_key.py  digirati.tf  extension_config  iam_experience_ci.tf  iam_roles.tf  iam_workflow_support.tf  outputs.tf  production.tf  provider.tf  rolesets.tf  terraform.tf
assets/: .terraform.lock.hcl  iam_users.tf  provider.tf  s3_largeaccession_temp.tf  s3_workingstorage.tf  terraform.tf
builds/: buildkite_agent_hook.sh  copy_docker_images_to_ecr.py  copy_images_to_ecr.py
cloudfront/: .gitignore  .terraform.lock.hcl  README.md  data.tf  lambdas.tf  locals.tf  main.tf  (+4 more)
monitoring/slack_alerts/: README.md  pyproject.toml
monitoring/slack_alerts/api_gateway_to_slack_alerts/: README.md
monitoring/slack_alerts/auth0_log_stream_alert/src/: auth0_log_stream_alert.py  download_log_event_type_codes.py  log_event_type_codes.json
monitoring/slack_alerts/ecs_tasks_cant_start_alert/src/: ecs_tasks_cant_start_alert.py
monitoring/slack_alerts/events/: auth0_log_stream_alert_sns.json  ecs_tasks_cant_start_eventbridge.json  lambda_errors_to_slack_alerts_sns.json  metric_to_slack_alert_sns.json
monitoring/slack_alerts/lambda_errors_to_slack_alerts/src/: lambda_errors_to_slack_alerts.py
monitoring/slack_alerts/metric_to_slack_alert/src/: metric_to_slack_alert.py
monitoring/slack_alerts/src/slack_alerts_local/: __init__.py  cli.py  runner.py
(+775 files in other folders)
